--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,9 +15,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions: write-all
-
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -87,6 +84,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -109,6 +110,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions: write-all
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v2
