--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -117,6 +117,8 @@ jobs:
         with:
           name: ${{ github.sha }}-output
           path: ./output
+      - name: Rename output file
+        run: mv ./output/output.md ./output/README.md
       - name: Push to built branch
         run: |
           git config user.name github-actions
