--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -124,5 +124,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add output/* -f
-          git commit -m "Deploy built file"
+          git commit -m "\"Deploy\" built file"
           git push origin `git subtree split --prefix output main`:output/built --force
