--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -71,15 +71,6 @@ jobs:
         with:
           name: ${{ github.sha }}-output
           path: ./output.md
-      - name: Add commit comment if PR
-        if: ${{ github.event_name == 'pull_request' }}
-        run: |
-          gh api \
-            --method POST \
-            -H "Accept: application/vnd.github+json" \
-            /repos/${{ github.event.pull_request.head.repo.owner.login }}/${{ github.event.pull_request.head.repo.name }}/issues/${{ github.event.pull_request.number }}/comments \
-            -f body="$(cat output.md)"
-
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
@@ -129,3 +120,22 @@ jobs:
         run: |
           git commit -m "\"Deploy\" built file"
           git push origin `git subtree split --prefix output main`:output/built --force
+
+  add_pr_comment:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: ${{ github.event_name == 'pull_request' }}
+    steps:
+      - name: Download the output file
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}-output
+          path: ./output
+      - name: Add commit comment if PR
+        run: |
+          gh api \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            /repos/${{ github.event.pull_request.head.repo.owner.login }}/${{ github.event.pull_request.head.repo.name }}/issues/${{ github.event.pull_request.number }}/comments \
+            -f body="$(cat ./output/output.md)"
+
