Gone and added some tests

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,5 +41,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build it
         run: stack build
+      - name: Test it
+        run: stack test
       - name: Run it
         run: stack run
