--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -O2
     dependencies:
     - mut-stack
 
@@ -57,3 +58,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - mut-stack
+    - HUnit >= 1.6 && < 1.7
