--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,11 +36,7 @@ jobs:
         run: stack run
       - name: Build docs
         # run: stack haddock --haddock-arguments="-o ./docs" 2&>docdir.txt
-        run: |
-          stack haddock
-          stack haddock 2&>docdir.txt
-      - name: Where are the docs?
-        run: echo $(cat docdir.txt | tail -n 1)
+        run: ./bin/docs
       - name: If PR, add comment
         if: ${{ github.event_name == 'pull_request' }}
         run: |
