--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
         run: stack run
       - name: Build docs
         # run: stack haddock --haddock-arguments="-o ./docs" 2&>docdir.txt
-        run: ./bin/docs
+        run: ./bin/docs.sh
       - name: If PR, add comment
         if: ${{ github.event_name == 'pull_request' }}
         run: |
