--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -18,6 +18,8 @@ on:
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+permissions: write-all
+
 # Allow one concurrent deployment
 concurrency:
   group: "pages"
