--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -17,6 +17,7 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/head/main' }}
 
 permissions: write-all
 
@@ -29,9 +30,9 @@ jobs:
   # Single deploy job since we're just deploying
   build:
     runs-on: ubuntu-latest
-    env:
-      is_main_push: ${{ github.event_name == 'push' && github.ref == 'refs/head/main' }}
     steps:
+      - name: Test
+        if: ${{ env.MAIN_PUSH }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: Test it
@@ -50,7 +51,7 @@ jobs:
             /repos/${{ github.event.pull_request.head.repo.owner.login }}/${{ github.event.pull_request.head.repo.name }}/issues/${{ github.event.pull_request.number }}/comments \
             -f body="$(cat ./output.md)"
       - name: If push to main, put file in branch
-        if: ${{ env.is_main_push }}
+        if: ${{ env.MAIN_PUSH }}
         run: |
           mkdir outputFiles
           cp output.md outputFiles/README.md
@@ -60,14 +61,14 @@ jobs:
           git commit -m "\"Deploy\" built file"
           git push origin `git subtree split --prefix outputFiles main`:output/built --force
       - name: Prep Pages
-        if: ${{ env.is_main_push }}
+        if: ${{ env.MAIN_PUSH }}
         uses: actions/configure-pages@v2
       - name: Upload to Pages
-        if: ${{ env.is_main_push }}
+        if: ${{ env.MAIN_PUSH }}
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./docs
       - name: Deploy to Pages
-        if: ${{ env.is_main_push }}
+        if: ${{ env.MAIN_PUSH }}
         uses: actions/deploy-pages@v1
       
