--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,7 @@ jobs:
     steps:
       - name: Test
         if: ${{ env.MAIN_PUSH }}
+        run: echo "It's a push to main!"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Test it
