--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Test
         if: ${{ env.MAIN_PUSH }}
-        run: echo "It's a ${{ github.event_name }} to ${{ github.ref }}"
+        run: echo "It's a ${{ github.event_name }} to ${{ github.ref }} ${{ env.MAIN_PUSH }}"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Test it
