--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,8 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Test
-        if: ${{ env.MAIN_PUSH }}
-        run: echo "It's a ${{ github.event_name }} to ${{ github.ref }} ${{ env.MAIN_PUSH }}"
+        if: ${{ env.MAIN_PUSH == 'true' }}
+        run: echo "It's a ${{ github.event_name }} to ${{ github.ref }} ${{ env.MAIN_PUSH == 'true' }}"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Test it
@@ -53,7 +53,7 @@ jobs:
             /repos/${{ github.event.pull_request.head.repo.owner.login }}/${{ github.event.pull_request.head.repo.name }}/issues/${{ github.event.pull_request.number }}/comments \
             -f body="$(cat ./output.md)"
       - name: If push to main, put file in branch
-        if: ${{ env.MAIN_PUSH }}
+        if: ${{ env.MAIN_PUSH == 'true' }}
         run: |
           mkdir outputFiles
           cp output.md outputFiles/README.md
@@ -63,14 +63,14 @@ jobs:
           git commit -m "\"Deploy\" built file"
           git push origin `git subtree split --prefix outputFiles main`:output/built --force
       - name: Prep Pages
-        if: ${{ env.MAIN_PUSH }}
+        if: ${{ env.MAIN_PUSH == 'true' }}
         uses: actions/configure-pages@v2
       - name: Upload to Pages
-        if: ${{ env.MAIN_PUSH }}
+        if: ${{ env.MAIN_PUSH == 'true' }}
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./docs
       - name: Deploy to Pages
-        if: ${{ env.MAIN_PUSH }}
+        if: ${{ env.MAIN_PUSH == 'true' }}
         uses: actions/deploy-pages@v1
       
