--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,7 +45,7 @@ jobs:
         # run: stack haddock --haddock-arguments="-o ./docs" 2&>docdir.txt
         run: ./bin/docs.sh
       - name: If PR, add comment
-        if: ${{ env.PULL_REQUEST }}
+        if: ${{ env.PULL_REQUEST == 'true' }}
         run: |
           gh api \
             --method POST \
