--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/head/main '}}
+  MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
   PULL_REQUEST: ${{ github.event_name == 'pull_request' }}
 
 permissions: write-all
