--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -61,7 +61,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add README.md
-          git comm "Deploy"
+          git commit -m "Deploy"
           git push origin output/built --force
       - name: Prep Pages
         if: ${{ env.MAIN_PUSH == 'true' }}
