--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -4,11 +4,11 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           mut-stack
-version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/mut-stack#readme>
-homepage:       https://github.com/githubuser/mut-stack#readme
-bug-reports:    https://github.com/githubuser/mut-stack/issues
+name:           mut-chems
+version:        2.1.0.0
+description:    Please see the README on GitHub at <https://github.com/GingertronMk1/MutChems#readme>
+homepage:       https://github.com/githubuser/mut-chems#readme
+bug-reports:    https://github.com/githubuser/mut-chems/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2022 Author name here
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/mut-stack
+  location: https://github.com/githubuser/mut-chems
 
 library
   exposed-modules:
@@ -33,7 +33,7 @@ library
       Functions.Domain
       Type
   other-modules:
-      Paths_mut_stack
+      Paths_mut_chems
   hs-source-dirs:
       src
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints
@@ -41,28 +41,28 @@ library
       base >=4.7 && <5
   default-language: Haskell2010
 
-executable mut-stack-exe
+executable mut-chems-exe
   main-is: Main.hs
   other-modules:
-      Paths_mut_stack
+      Paths_mut_chems
   hs-source-dirs:
       app
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
       base >=4.7 && <5
-    , mut-stack
+    , mut-chems
   default-language: Haskell2010
 
-test-suite mut-stack-test
+test-suite mut-chems-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_mut_stack
+      Paths_mut_chems
   hs-source-dirs:
       test
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit ==1.6.*
     , base >=4.7 && <5
-    , mut-stack
+    , mut-chems
   default-language: Haskell2010
