--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                mut-stack
-version:             0.1.0.0
-github:              "githubuser/mut-stack"
+name:                mut-chems
+version:             2.1.0.0
+github:              "githubuser/mut-chems"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/mut-stack#readme>
+description:         Please see the README on GitHub at <https://github.com/GingertronMk1/MutChems#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -31,7 +31,7 @@ library:
   source-dirs: src
 
 executables:
-  mut-stack-exe:
+  mut-chems-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -40,10 +40,10 @@ executables:
     - -with-rtsopts=-N
     - -O2
     dependencies:
-    - mut-stack
+    - mut-chems
 
 tests:
-  mut-stack-test:
+  mut-chems-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -51,5 +51,5 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - mut-stack
+    - mut-chems
     - HUnit >= 1.6 && < 1.7
