--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -18,6 +18,7 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  OUTPUT_BRANCH: output/built
 
 # Allow one concurrent deployment
 concurrency:
@@ -49,6 +50,7 @@ jobs:
         with:
           name: ${{ github.sha }}-output
           path: ./output.md
+
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
@@ -74,10 +76,21 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-    
+
+   ensure_branch_exists:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions: write-all
+    steps:
+      - uses: actions/checkout@v3
+      - name: Checkout to branch
+        run: git checkout -b $OUTPUT_BRANCH
+      - name: Push to branch, creating if necessary
+        run: git push -u origin $OUTPUT_BRANCH
+   
   put_file_in_branch:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, ensure_branch_exists]
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     permissions: write-all
     steps:
@@ -97,7 +110,7 @@ jobs:
       - name: Commit and push
         run: |
           git commit -m "\"Deploy\" built file"
-          git push origin `git subtree split --prefix output main`:output/built --force
+          git push origin `git subtree split --prefix output main`:$OUTPUT_BRANCH --force
 
   add_pr_comment:
     runs-on: ubuntu-latest
