--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -83,11 +83,9 @@ jobs:
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
-      - name: Checkout to branch
-        run: git checkout -b $OUTPUT_BRANCH
-      - name: Push to branch, creating if necessary
-        run: git push -u origin $OUTPUT_BRANCH
-   
+      - name: Check branches
+        run: ./bin/branch-check.sh $OUTPUT_BRANCH
+
   put_file_in_branch:
     runs-on: ubuntu-latest
     needs: [build, ensure_branch_exists]
