--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -78,6 +78,8 @@ jobs:
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
+      - name: Fetch!
+        run: git fetch origin
       - name: Check branches
         run: ./bin/branch-check.sh $OUTPUT_BRANCH
 
