--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -78,10 +78,22 @@ jobs:
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
-      - name: Fetch!
-        run: git fetch origin
       - name: Check branches
-        run: ./bin/branch-check.sh $OUTPUT_BRANCH
+        run: |
+          git fetch origin
+          echo "Checking for existence of $1..."
+          ORIGIN_BRANCH="origin/$OUTPUT_BRANCH"
+          if [ -z "$(git branch -r | grep "$ORIGIN_BRANCH")" ]
+          then
+            CURRENT_BRANCH="$(git branch --show-current)"
+            echo "No branch called $OUTPUT_BRANCH, creating..."
+            git checkout -b $OUTPUT_BRANCH
+            git push -u origin $OUTPUT_BRANCH
+            echo "Checking back out to $CURRENT_BRANCH"
+            git checkout $CURRENT_BRANCH
+          else
+            echo "Branch $OUTPUT_BRANCH exists, doing nothing..."
+          fi
 
   put_file_in_branch:
     runs-on: ubuntu-latest
