--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           mut-chems
 version:        2.1.0.0
 description:    Please see the README on GitHub at <https://github.com/GingertronMk1/MutChems#readme>
-homepage:       https://github.com/githubuser/mut-chems#readme
-bug-reports:    https://github.com/githubuser/mut-chems/issues
+homepage:       https://github.com/gingertronmk1/mut#readme
+bug-reports:    https://github.com/gingertronmk1/mut/issues
 author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+maintainer:     jackellis1504@gmail.com
+copyright:      Jack Ellis
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/mut-chems
+  location: https://github.com/gingertronmk1/mut
 
 library
   exposed-modules:
