--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -39,6 +39,7 @@ library
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , parallel ==3.*
   default-language: Haskell2010
 
 executable mut-chems-exe
@@ -51,6 +52,7 @@ executable mut-chems-exe
   build-depends:
       base >=4.7 && <5
     , mut-chems
+    , parallel ==3.*
   default-language: Haskell2010
 
 test-suite mut-chems-test
@@ -65,4 +67,5 @@ test-suite mut-chems-test
       HUnit ==1.6.*
     , base >=4.7 && <5
     , mut-chems
+    , parallel ==3.*
   default-language: Haskell2010
