whole buncha stuff to lean towards a Legends chem team

--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -31,7 +31,8 @@ library
       Functions.Application
       Functions.Display
       Functions.Domain
-      Type
+      Types.Declarations
+      Types.Instances
   other-modules:
       Paths_mut_chems
   hs-source-dirs:
