--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -29,8 +29,8 @@ library
       Data.Other
       Data.Squad
       Data.Teams
-      Display
       Functions.Application
+      Functions.Display
       Functions.Domain
       Types.Basic
       Types.ProspectiveChange
