--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/Ging
 
 dependencies:
 - base >= 4.7 && < 5
+- time >= 1.9 && < 2
 
 ghc-options:
 - -Wall
