--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,9 +28,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install
-        run: stack install
+        run: ./bin/install
       - name: Test the thing
         run: stack test
+      - name: Check formatting
+        run: ormolu --mode check $(find . -name '*.hs')
       - name: Run the thing
         run: stack run
       - id: buildstep
