--- a/package.yaml
+++ b/package.yaml
@@ -1,8 +1,8 @@
 name:                mut-chems
-version:             2.1.0.0
+version:             1.0.0
 github:              "gingertronmk1/mut"
 license:             BSD3
-author:              "Author name here"
+author:              "Jack Ellis"
 maintainer:          "jackellis1504@gmail.com"
 copyright:           "Jack Ellis"
 
