--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,10 +27,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Copy Data.Other
-        run: mv src/Data/Other.hs.dist src/Data/Other.hs
       - name: Install
-        run: stack install
+        run: ./bin/install
       - name: Test the thing
         run: stack test
       - name: Run the thing
