--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -42,7 +42,9 @@ library
       src
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      aeson >=2.1 && <3
+    , base >=4.7 && <5
+    , bytestring ==0.10.*
     , time >=1.9 && <2
   default-language: Haskell2010
 
@@ -54,7 +56,9 @@ executable mut-chems-exe
       app
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
-      base >=4.7 && <5
+      aeson >=2.1 && <3
+    , base >=4.7 && <5
+    , bytestring ==0.10.*
     , mut-chems
     , time >=1.9 && <2
   default-language: Haskell2010
@@ -69,7 +73,9 @@ test-suite mut-chems-test
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit ==1.6.*
+    , aeson >=2.1 && <3
     , base >=4.7 && <5
+    , bytestring ==0.10.*
     , mut-chems
     , time >=1.9 && <2
   default-language: Haskell2010
