--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ description:         Please see the README on GitHub at <https://github.com/Ging
 dependencies:
 - base >= 4.7 && < 5
 - time >= 1.9 && < 2
+- aeson >= 2.1 && < 3
+- bytestring >= 0.10 && < 0.11
 
 ghc-options:
 - -Wall
