--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -46,6 +46,7 @@ library
       aeson >=2.1 && <3
     , base >=4.7 && <5
     , bytestring ==0.10.*
+    , split ==0.2.*
     , time >=1.9 && <2
   default-language: Haskell2010
 
@@ -61,6 +62,7 @@ executable mut-chems-exe
     , base >=4.7 && <5
     , bytestring ==0.10.*
     , mut-chems
+    , split ==0.2.*
     , time >=1.9 && <2
   default-language: Haskell2010
 
@@ -78,5 +80,6 @@ test-suite mut-chems-test
     , base >=4.7 && <5
     , bytestring ==0.10.*
     , mut-chems
+    , split ==0.2.*
     , time >=1.9 && <2
   default-language: Haskell2010
