--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,7 @@ dependencies:
 - time >= 1.9 && < 2
 - aeson >= 2.1 && < 3
 - bytestring >= 0.10 && < 0.11
+- split >= 0.2 && < 0.3
 
 ghc-options:
 - -Wall
