--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -34,6 +34,7 @@ library
       Functions.Display
       Types.Basic
       Types.JSON.Lineup
+      Types.Player
       Types.ProspectiveChange
       Types.TeamOrMultiple
       Types.Variation
@@ -43,11 +44,11 @@ library
       src
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints
   build-depends:
-      aeson >=2 && <3
-    , base >=4.7 && <5
+      aeson ==2.*
+    , base ==4.*
     , bytestring ==0.10.*
     , split ==0.2.*
-    , time >=1.9 && <2
+    , time ==1.*
   default-language: Haskell2010
 
 executable mut-chems-exe
@@ -58,12 +59,12 @@ executable mut-chems-exe
       app
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
-      aeson >=2 && <3
-    , base >=4.7 && <5
+      aeson ==2.*
+    , base ==4.*
     , bytestring ==0.10.*
     , mut-chems
     , split ==0.2.*
-    , time >=1.9 && <2
+    , time ==1.*
   default-language: Haskell2010
 
 test-suite mut-chems-test
@@ -76,10 +77,10 @@ test-suite mut-chems-test
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit ==1.6.*
-    , aeson >=2 && <3
-    , base >=4.7 && <5
+    , aeson ==2.*
+    , base ==4.*
     , bytestring ==0.10.*
     , mut-chems
     , split ==0.2.*
-    , time >=1.9 && <2
+    , time ==1.*
   default-language: Haskell2010
