--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -30,6 +30,7 @@ library
       Data.Positions
       Data.Teams
       Functions.Application
+      Types.ArgumentList
       Types.Basic
       Types.BuildObject
       Types.DisplayObject
