--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,31 +47,31 @@ jobs:
           name: ${{ github.sha }}-output
           path: ./output.md
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [build]
-  #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-  #   permissions:
-  #     contents: read
-  #     pages: write
-  #     id-token: write
-  #   environment:
-  #     name: github-pages
-  #     url: ${{ steps.deployment.outputs.page_url }}
-  #   steps:
-  #     - uses: actions/download-artifact@v2
-  #       with:
-  #         name: ${{ github.sha }}-docs
-  #         path: ./built-docs
-  #     - name: Setup Pages
-  #       uses: actions/configure-pages@v2
-  #     - name: Upload artifact
-  #       uses: actions/upload-pages-artifact@v1
-  #       with:
-  #         path: ./built-docs
-  #     - name: Deploy to GitHub Pages
-  #       id: deployment
-  #       uses: actions/deploy-pages@v1
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}-docs
+          path: ./built-docs
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./built-docs
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
 
   ensure_branch_exists:
     runs-on: ubuntu-latest
