--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Classes.Data
       Data.Calculated
       Data.Other
       Data.Positions
