--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -48,10 +48,7 @@ library
       src
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints
   build-depends:
-      aeson ==2.*
-    , base ==4.*
-    , bytestring ==0.10.*
-    , time ==1.*
+      base ==4.*
   default-language: Haskell2010
 
 executable mut-chems-exe
@@ -62,11 +59,8 @@ executable mut-chems-exe
       app
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
-      aeson ==2.*
-    , base ==4.*
-    , bytestring ==0.10.*
+      base ==4.*
     , mut-chems
-    , time ==1.*
   default-language: Haskell2010
 
 test-suite mut-chems-test
@@ -79,9 +73,6 @@ test-suite mut-chems-test
   ghc-options: -Wall -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit ==1.6.*
-    , aeson ==2.*
     , base ==4.*
-    , bytestring ==0.10.*
     , mut-chems
-    , time ==1.*
   default-language: Haskell2010
