I don't want to use text.printf anymore

--- a/mut-chems.cabal
+++ b/mut-chems.cabal
@@ -39,6 +39,7 @@ library
       Types.Player
       Types.Position
       Types.PositionGroup
+      Types.Printable
       Types.ProspectiveChange
       Types.Team
       Types.TeamOrMultiple
