Updates to output viewing

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run
         run: ./bin/run
       - name: Output
-        run: cat output.csv
+        run: ./bin/view-output
