--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-.stack-work/
-*~
-output.*
-output-*.csv
-docdir.txt
-docs/**/*
-*.prof
-scratch.txt
-src/Data/Other.hs
 *__pycache__*
+outputs/*
+!outputs/.gitkeep
