--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
           context: .
           dockerfile: ./Dockerfile
         volumes:
-            - "./:/app"
+            - "./:/app:delegated"
