--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -18,10 +18,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # - name: Lint
-      #   run: ./bin/lint
-      # - name: Format
-      #   run: ./bin/format
+      - name: Install
+        run: ./bin/install
+    #   - name: Lint
+    #     run: ./bin/lint
+    #   - name: Format
+    #     run: ./bin/format
       - name: Run
         run: ./bin/run
       - name: Output
