--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,10 +20,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Install
         run: ./bin/install
-    #   - name: Lint
-    #     run: ./bin/lint
-    #   - name: Format
-    #     run: ./bin/format
+      - name: Format
+        run: ./bin/format
+        continue-on-error: true
+      - name: Lint
+        run: ./bin/lint
+        continue-on-error: true
       - name: Run
         run: ./bin/run
       - name: Output
