--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -11,6 +11,16 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  OUTPUT_BRANCH: output/built
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   # Single deploy job since we're just deploying
   build:
@@ -30,3 +40,52 @@ jobs:
         run: ./bin/run
       - name: Output
         run: ./bin/view-output
+      - name: Upload docs for next step
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ github.sha }}-output
+          path: ./output
+  ensure_branch_exists:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions: write-all
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check branches
+        run: |
+          git fetch origin
+          echo "Checking for existence of $OUTPUT_BRANCH..."
+          ORIGIN_BRANCH="origin/$OUTPUT_BRANCH"
+          if [ -z "$(git branch -r | grep "$ORIGIN_BRANCH")" ]
+          then
+          CURRENT_BRANCH="$(git branch --show-current)"
+          echo "No branch called $OUTPUT_BRANCH, creating..."
+          git checkout -b $OUTPUT_BRANCH
+          git push -u origin $OUTPUT_BRANCH
+          echo "Checking back out to $CURRENT_BRANCH"
+          git checkout $CURRENT_BRANCH
+          else
+          echo "Branch $OUTPUT_BRANCH exists, doing nothing..."
+          fi
+
+  put_file_in_branch:
+    runs-on: ubuntu-latest
+    needs: [build, ensure_branch_exists]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    permissions: write-all
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v2
+        with:
+          name: ${{ github.sha }}-output
+          path: ./output
+      - name: Configure git
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+      - name: Add the file
+        run: git add output/* -f
+      - name: Commit and push
+        run: |
+          git commit -m "\"Deploy\" built file"
+          git push origin `git subtree split --prefix output main`:$OUTPUT_BRANCH --force
