--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,6 +15,7 @@ on:
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   OUTPUT_BRANCH: output/built
+  OUTPUT_DIR: ./outputs
 
 # Allow one concurrent deployment
 concurrency:
@@ -31,7 +32,7 @@ jobs:
       - name: Install
         run: ./bin/install
       - name: Format
-        run: ./bin/format
+        run: ./bin/format git fetch origin
         continue-on-error: true
       - name: Lint
         run: ./bin/lint
@@ -44,7 +45,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ github.sha }}-output
-          path: ./outputs
+          path: $OUTPUT_DIR
   ensure_branch_exists:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -78,14 +79,16 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: ${{ github.sha }}-output
-          path: ./outputs
+          path: $OUTPUT_DIR
+      - name: FETCH
+        run: git fetch origin
       - name: Configure git
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
       - name: Add the file
-        run: git add outputs/* -f
+        run: git add $OUTPUT_DIR/* -f
       - name: Commit and push
         run: |
           git commit -m "\"Deploy\" built file"
-          git push origin `git subtree split --prefix output main`:$OUTPUT_BRANCH --force
+          git push origin `git subtree split --prefix $OUTPUT_DIR main`:$OUTPUT_BRANCH --force
